@@ -5,6 +5,8 @@
  * @author shika
  * @date 2021-01-15 / 09:28-09:34 (5分)
  * @correctRate ①42.86 ％ ( 〇3問 / 全7問 )
+ * @date 2021-01-19 / 14:31-14:35 (4分)
+ * @correctRate ②85.71 ％ ( 〇6問 / 全7問 )
  */
 package javaSilver.SE11Black;
 
@@ -41,4 +43,25 @@ public class Chapter11 {
 所要時間 5 分
 
 正答率 42.86 ％ ( 〇3問 / 全7問 )
+*/
+/*
+//====== ２回目 / 2021-01-19 ======
+〇 1: A, B
+〇 2: D
+〇 3: D
+〇 4: D
+〇 5: B
+× 6: C, D => 〇: A, C
+    java --describe-module / module-info.javaの設定内容を表示
+    jmod describe / module-info.javaの設定内容を表示
+    jdeps --list-deps / クラス,メソッド, jar, モジュールの依存関係を調べる
+    java --show-module-resolution / プログラム実行時に依存するモジュールがどのように探されているかを表示
+〇 7: A
+    「javac --add-exports モジュール / パッケージ名」 一時的に公開するパッケージを追加
+
+開始時刻 14:31
+終了時刻 14:35
+所要時間 4 分
+
+正答率 85.71 ％ ( 〇6問 / 全7問 )
 */
